# loyverse_manager

./: .gitignore  REAMDE.md  pyproject.toml
config/: constants.py  settings.py
migrations/: 001-group_bookings.sql  002-audit.sql  003-loyverse_open_tickets.sql
requirements/: dev.txt  prod.txt
scripts/: add_inventory.py  clear_inventory.py  hide_quicket_event.py  run_migrations.py
src/bots/: quicket.py
src/clients/: base.py  chatwoot.py  loyverse.py  meta_whatsapp.py  paycloud.py  quicket.py
src/models/: audit.py  group_booking.py  open_ticket.py
src/repositories/: aronium.py  mysql.py
src/services/: audit.py  barcode.py  chatwoot.py  group.py  inventory.py  loyverse.py  meta_whatsapp.py  notification.py  paycloud.py  pdf.py  quicket.py  token.py
src/utils/: date.py  gazebos.py  logging.py
web/: __main__.py  app.py  config.py  wsgi.py
web/models/: database.py
web/routes/: api.py  audit.py  groups.py  open_tickets.py  scripts.py
web/services/: barcode.py  loyverse.py  pdf.py  whatsapp.py
web/static/css/: styles.css
web/templates/: audit_history.html  base.html  dashboard.html  group_bookings.html  scripts.html
web/utils/: formatters.py
